--- a/requirements.txt
+++ b/requirements.txt
@@ -1,293 +1,35 @@
-addict==2.4.0
-aiohappyeyeballs==2.4.3
-aiohttp==3.11.8
-aiohttp-cors==0.7.0
-aiosignal==1.3.1
-alembic==1.14.0
-annotated-types==0.7.0
-anyio==4.4.0
-anykeystore==0.2
-apex @ file:///workspace/CenterPoint/apex
-appdirs==1.4.4
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==2.4.1
-async-lru==2.0.4
-async-timeout==5.0.1
-attrs==24.2.0
-babel==2.16.0
-beautifulsoup4==4.12.3
-bleach==6.1.0
-blinker==1.8.2
-bottle==0.13.2
-cachetools==5.3.3
-ccimport==0.4.3
-certifi==2024.7.4
-cffi==1.17.0
-charset-normalizer==3.3.2
-click==8.1.7
-cmake==3.30.2
-colorful==0.5.6
-colorlog==6.9.0
-comm==0.2.2
-ConfigArgParse==1.7
-contourpy==1.2.1
-cryptacular==1.6.2
-cryptography==3.4.8
-cumm-cu117==0.4.11
-cupy==12.2.0
-cycler==0.12.1
-dash==2.18.1
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-dbus-python==1.2.18
-debugpy==1.8.5
-decorator==5.1.1
-defusedxml==0.7.1
-descartes==1.1.0
-distlib==0.3.9
-distro==1.7.0
-distro-info==1.1+ubuntu0.2
-docker-pycreds==0.4.0
-easydict==1.13
-exceptiongroup==1.2.2
-executing==2.0.1
-fastjsonschema==2.20.0
-fastrlock==0.8.2
-filelock==3.15.4
-fire==0.5.0
-flake8==7.1.1
-flake8-import-order==0.18.2
-Flask==3.0.3
-fonttools==4.53.1
-fqdn==1.5.1
-frozenlist==1.5.0
-gitdb==4.0.11
-GitPython==3.1.43
-google-api-core==2.23.0
-google-auth==2.36.0
-googleapis-common-protos==1.66.0
-greenlet==3.0.3
-grpcio==1.68.0
-gunicorn==23.0.0
-h11==0.14.0
-httpcore==1.0.5
-httplib2==0.20.2
-httpx==0.27.0
-hupper==1.12.1
-idna==3.7
-imagecorruptions==1.1.2
-imageio==2.35.0
-importlib_metadata==8.2.0
-ipdb==0.13.13
-ipykernel==6.29.5
-ipython==8.26.0
-ipywidgets==8.1.3
-isoduration==20.11.0
-itsdangerous==2.2.0
-jedi==0.19.1
-jeepney==0.7.1
-Jinja2==3.1.4
-joblib==1.4.2
-json5==0.9.25
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-jupyter_server==2.14.2
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.4
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.11
-keyring==23.5.0
-kiwisolver==1.4.5
-lark==1.2.2
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lazy_loader==0.4
-linkify-it-py==2.0.3
-lit==18.1.8
-llvmlite==0.38.1
-Mako==1.3.6
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.5.2
-matplotlib-inline==0.1.7
-mdit-py-plugins==0.4.2
-mdurl==0.1.2
-memray==1.14.0
-mistune==3.0.2
-mmcv-full==1.7.2
-mmdet==2.14.0
-more-itertools==8.10.0
-motmetrics==1.1.3
-mpmath==1.3.0
-msgpack==1.1.0
-multidict==6.1.0
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.3
-ninja==1.11.1.1
-notebook==7.2.1
-notebook_shim==0.2.4
-numba==0.55.0
-numpy==1.21.6
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cufft-cu11==10.9.0.58
-nvidia-curand-cu11==10.2.10.91
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-nccl-cu11==2.14.3
-nvidia-nvtx-cu11==11.7.91
-oauthlib==3.2.0
-objgraph==3.6.1
-open3d==0.18.0
-open3d-python==0.3.0.0
-opencensus==0.11.4
-opencensus-context==0.1.3
-opencv-contrib-python==4.9.0.80
-opencv-python==4.9.0.80
-optuna==4.1.0
-optuna-dashboard==0.17.0
-optuna-fast-fanova==0.0.4
-overrides==7.7.0
-packaging==24.1
-pandas==1.5.3
-pandocfilters==1.5.1
-parso==0.8.4
-PasteDeploy==3.1.0
-pbkdf2==1.3
-pccm==0.4.14
-pexpect==4.9.0
-pillow==10.4.0
-plaster==1.1.2
-plaster-pastedeploy==1.0.1
-platformdirs==4.2.2
-plotly==5.24.1
-portalocker==2.10.1
-prometheus_client==0.20.0
-prompt_toolkit==3.0.47
-propcache==0.2.0
-proto-plus==1.25.0
-protobuf==5.29.0
-psutil==6.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-py-spy==0.4.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pybind11==2.11.1
-pycocotools==2.0.7
-pycparser==2.22
-pydantic==2.6.4
-pydantic_core==2.16.3
-Pygments==2.18.0
-PyGObject==3.42.1
-PyJWT==2.3.0
-pyparsing==2.4.7
-pypcd4==1.0.1
-pyquaternion==0.9.9
-pyramid==2.0.2
-pyramid-mailer==0.15.1
-pytest-runner==6.0.1
-python-apt==2.4.0+ubuntu3
-python-dateutil==2.9.0.post0
-python-json-logger==2.0.7
-python-lzf==0.2.6
-python3-openid==3.2.0
-pytz==2024.1
-PyYAML==6.0.1
-pyzmq==26.1.0
-qtconsole==5.5.2
-QtPy==2.4.1
-ray==2.39.0
-referencing==0.35.1
-repoze.sendmail==4.4.1
-requests==2.31.0
-requests-oauthlib==2.0.0
-retrying==1.3.4
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.9.4
-rpds-py==0.20.0
-rsa==4.9
-scikit-image==0.19.3
-scikit-learn==1.4.1.post1
-scipy==1.7.3
-screeninfo==0.8.1
-seaborn==0.13.2
-SecretStorage==3.3.1
-Send2Trash==1.8.3
-sentry-sdk==2.13.0
-setproctitle==1.3.3
-Shapely==1.8.5
-six==1.16.0
-smart-open==7.0.5
-smmap==5.0.1
-sniffio==1.3.1
-soupsieve==2.6
-spconv-cu117==2.3.6
-SQLAlchemy==2.0.32
-stack-data==0.6.3
-sympy==1.13.2
-tenacity==9.0.0
-termcolor==2.4.0
-terminado==0.18.1
-terminaltables==3.1.10
-textual==0.88.0
-threadpoolctl==3.5.0
-tifffile==2024.8.10
-tinycss2==1.3.0
-tomli==2.0.1
 torch==2.0.1
 torchvision==0.15.2
-tornado==6.4.1
-tqdm==4.66.2
-traitlets==5.14.3
-transaction==4.0
-transforms3d==0.4.1
-translationstring==1.4
-triton==2.0.0
-types-python-dateutil==2.9.0.20240316
-typing_extensions==4.12.2
-tzdata==2024.1
-uc-micro-py==1.0.3
-unattended-upgrades==0.1
-uri-template==1.3.0
-urllib3==2.2.2
-velruse==1.1.1
-venusian==3.1.0
-virtualenv==20.28.0
-wadllib==1.3.6
-wandb==0.17.7
-wcwidth==0.2.13
-webcolors==24.8.0
-webencodings==0.5.1
-WebOb==1.8.8
-websocket-client==1.8.0
-Werkzeug==3.0.4
-widgetsnbextension==4.0.11
-wrapt==1.17.0
-WTForms==3.1.2
-wtforms-recaptcha==0.3.2
-xmltodict==0.13.0
-yapf==0.40.2
-yarl==1.18.0
-zipp==1.0.0
-zope.deprecation==5.0
-zope.interface==7.0.1
+spconv-cu117==2.3.6
+cumm-cu117==0.4.11
+wandb
+ipdb
+numba==0.55.0                                                                                                     
+matplotlib==3.5.2                                                                                                
+fire==0.5.0                                                                                                      
+protobuf==5.29.0                                                                                                  
+opencv-python==4.9.0.80                                                                                             
+opencv-contrib-python==4.9.0.80                                                                                     
+pybind11==2.11.1                                                                                                                                                                                                                                                                                                             
+easydict==1.13                                                                                                  
+open3d-python==0.3.0.0                                                                                            
+terminaltables==3.1.10                                                                                            
+pytest-runner==6.0.1                                                                                             
+addict==2.4.0                                                                                                    
+pycocotools==2.0.7                                                                                               
+imagecorruptions==1.1.2                                                                                          
+objgraph==3.6.1                                                                                                  
+cachetools==5.3.3
+descartes==1.1.0
+jupyter==1.0.0
+motmetrics<=1.1.3
+numpy==1.21.6
+pandas==1.5.3
+pillow==10.4.0
+pyquaternion==0.9.9
+scikit-learn==1.4.1.post1
+Shapely==1.8.5
+tqdm
+PyYAML==6.0.1
+requests==2.31.0
+nuscenes-devkit==1.0.5
